# scriptorium

./: README.md  com.scriptorium.watcher.plist  main.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-05-04-llm-providers.md  2026-05-04-scriptorium.md
docs/superpowers/specs/: 2026-05-04-llm-providers-design.md  2026-05-04-scriptorium-design.md
scriptorium/: claude.py  config.py  extractor.py  llm.py  watcher.py  writer.py
tests/: test_claude.py  test_config.py  test_extractor.py  test_llm.py  test_watcher.py  test_writer.py
