[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scriptorium"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "watchdog>=4.0.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["scriptorium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
